--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/Natalia-Yuschenko/goit-js-hw-10.git"
   },
   "keywords": [],
-  "author": "N Yuschenko <nata.yuschenko91@gmail.com>",
+  "author": "Yuschenko <nata.yuschenko91@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Natalia-Yuschenko/goit-js-hw-10/issues"
